--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Estou testando o Git</h1>
+    <h2>Comandos do Git:</h2>
+    <h3>Git init, Git commit, git add</h3>
 </body>
 </html>
